fixed some scrollbars

--- a/app/main.css
+++ b/app/main.css
@@ -84,6 +84,22 @@ a {
   cursor: auto;
 }
 
+.delete:hover {
+  opacity: 0.7;
+}
+
+details {
+  overflow: hidden;
+}
+
+details[open] {
+  overflow-y: auto;
+}
+
+footer li:hover {
+  text-decoration: underline;
+}
+
 .feedback-link {
   background-color: #000;
   background-image: url('../assets/feedback.svg');
@@ -130,14 +146,6 @@ a {
   height: 32px;
   width: 100px;
   flex-shrink: 0;
-}
-
-.delete:hover {
-  opacity: 0.7;
-}
-
-footer li:hover {
-  text-decoration: underline;
 }
 
 #password-msg::after {
